--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href = "Hello-Puppets-quiz.css">
+	<link rel="stylesheet" href = "./Other Files/Hello-Puppets-quiz.css">
 	<title>The Hello Puppets Quiz</title>
 
 	<script
